# apigen

./: .gitignore  CHANGELOG.md  README.md  gateway.py  openapi.json  pyproject.toml  requirements.txt
apigen/: __init__.py  _cli.py  _vars.py  main.py  make_openapi3_json.py  make_postman.py  meraki_api.json  utils.py
assets/: meraki_api.json
codegen/: __init__.py  __main__.py  _cache.py  _cli.py  _hardcoded.py  _parse_html.py  _utils.py  _vars.py  _web.py  codegen_main.py  main.py  make_api_client.py  make_openapi3_json.py  make_postman.py  meraki_api.json  utils.py
oag_meraki/: __init__.py  _vars.py  _web.py  apidocs_to_openapi3.py  interface_openapi.py  main.py  utils.py
test/: known_working_admins.yaml
tests/: __init__.py  test_cli.py  test_integration.py
