[tool.poetry]
name = "mad_codegen"
version = "0.1.3"
description = "Meraki API Docs Code Generator"
license = "Apache-2.0"
authors = [ "Ross Jacobs <rj@swit.sh>" ]
readme = "README.md"
repository = "https://github.com/pocc/mad-codegen"
documentation = "https://github.com/pocc/mad-codegen"
keywords = ["networking", "api", "meraki", "openapi", "code-generation"]

classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]

[tool.poetry.dependencies]
python = ">=3.5"
docopt = "^0.6.2"
inflection = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
pytest-cov = "^2.5"
mkdocs = { version = "^1.0", python = "~2.7.9 || ^3.4" }
pymdown-extensions = "^6.0"
pygments = "^2.2"
pytest-mock = "^1.9"
pygments-github-lexers = "^0.0.5"
black = { version = "^18.3-alpha.0", python = "^3.6" }
pre-commit = "^1.10"
tox = "^3.0"
pytest-sugar = "^0.9.2"

[tool.poetry.scripts]
mad_codegen = "mad-codegen.codegen.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"